--- a/DevMag/App_Data/Sitefinity/Configuration/SystemConfig.config
+++ b/DevMag/App_Data/Sitefinity/Configuration/SystemConfig.config
@@ -32,6 +32,7 @@
 		<add version="8.2.5914.0" name="DataIntelligenceConnector" />
 		<add version="8.2.5914.0" name="Comments" />
 		<add version="8.2.5914.0" name="RecycleBin" />
+		<add startupType="OnApplicationStart" version="1.4.400.0" name="Feather" />
 		<add version="8.2.5914.0" name="Translations" />
 		<add title="Audit Trail - Elasticsearch" description="Logs audit events to an Elasticsearch instance." moduleId="00000000-0000-0000-0000-000000000000" type="Telerik.Sitefinity.Audit.Elasticsearch.ElasticsearchAuditModule, Telerik.Sitefinity.Audit.Elasticsearch, Version=8.2.5914.0, Culture=neutral, PublicKeyToken=b28c218413bdf563" startupType="Disabled" name="ElasticsearchAudit" />
 	</applicationModules>
