--- a/DevMag/SitefinityWebApp.csproj
+++ b/DevMag/SitefinityWebApp.csproj
@@ -8,6 +8,8 @@
     <IISExpressAnonymousAuthentication>enabled</IISExpressAnonymousAuthentication>
     <IISExpressWindowsAuthentication>disabled</IISExpressWindowsAuthentication>
     <IISExpressUseClassicPipelineMode>false</IISExpressUseClassicPipelineMode>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
     <!--<EnhancerAssembly>$(SolutionDir)\packages\Telerik.DataAccess.Fluent.2015.3.926.1\tools\enhancer\enhancer.exe</EnhancerAssembly>-->
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -781,24 +783,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Build\RazorGenerator.MsBuild\tools\RazorGenerator.Core.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\RazorGenerator.MsBuild.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v1\RazorGenerator.Core.v1.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v1\System.Web.Mvc.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v1\System.Web.Razor.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v1\System.Web.WebPages.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v1\System.Web.WebPages.Razor.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v2\RazorGenerator.Core.V2.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v2\System.Web.Mvc.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v2\System.Web.Razor.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v2\System.Web.WebPages.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v2\System.Web.WebPages.Razor.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v3\RazorGenerator.Core.V3.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v3\System.Web.Mvc.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v3\System.Web.Razor.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v3\System.Web.WebPages.Deployment.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v3\System.Web.WebPages.dll" />
-    <Content Include="Build\RazorGenerator.MsBuild\tools\v3\System.Web.WebPages.Razor.dll" />
+    <Content Include="Build\FeatherPrecompilation.targets" />
     <Content Include="ClientBin\Telerik.Sitefinity.Analytics.xap" />
     <Content Include="ClientBin\Telerik.Sitefinity.Silverlight.xap" />
     <Content Include="Default.aspx" />
@@ -1154,9 +1139,7 @@
     <Content Include="ResourcePackages\Custom\package.json" />
     <Content Include="ResourcePackages\Custom\razorgenerator.directives" />
     <Content Include="ResourcePackages\Custom\README.md" />
-    <Content Include="Build\FeatherPrecompilation.targets" />
-    <Content Include="Build\RazorGenerator.MsBuild\build\RazorGenerator.MsBuild.targets" />
-    <Content Include="Build\RazorGenerator.MsBuild\RazorGenerator.MsBuild.2.4.1.nupkg" />
+    <Content Include="ResourcePackages\Custom\MVC\Views\Navigation\NavigationView.MainNav.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!--<Import Project="OpenAccessNuget.targets" />-->
@@ -1189,4 +1172,11 @@
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="Build\FeatherPrecompilation.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
 </Project>
