--- a/DevMag/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
+++ b/DevMag/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
@@ -142,6 +142,7 @@
 						<add enabled="True" type="Telerik.Sitefinity.Frontend.GridSystem.GridControl, Telerik.Sitefinity.Frontend" title="grid-6+6" cssClass="sfL50_50" layoutTemplate="~/Frontend-Assembly/Telerik.Sitefinity.Frontend/GridSystem/Templates/grid-6+6.html" visibilityMode="None" name="grid-6+6" />
 						<add enabled="True" type="Telerik.Sitefinity.Frontend.GridSystem.GridControl, Telerik.Sitefinity.Frontend" title="grid-8+4" cssClass="sfL67_33" layoutTemplate="~/Frontend-Assembly/Telerik.Sitefinity.Frontend/GridSystem/Templates/grid-8+4.html" visibilityMode="None" name="grid-8+4" />
 						<add enabled="True" type="Telerik.Sitefinity.Frontend.GridSystem.GridControl, Telerik.Sitefinity.Frontend" title="grid-9+3" cssClass="sfL75_25" layoutTemplate="~/Frontend-Assembly/Telerik.Sitefinity.Frontend/GridSystem/Templates/grid-9+3.html" visibilityMode="None" name="grid-9+3" />
+						<add enabled="True" type="Telerik.Sitefinity.Frontend.GridSystem.GridControl, Telerik.Sitefinity.Frontend" title="section" layoutTemplate="~/Frontend-Assembly/Telerik.Sitefinity.Frontend/GridSystem/Templates/section.html" visibilityMode="None" name="section" />
 					</tools>
 				</add>
 			</sections>
