--- a/DevMag/SitefinityWebApp.csproj
+++ b/DevMag/SitefinityWebApp.csproj
@@ -780,6 +780,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureWebRole.cs" />
+    <Compile Include="Mvc\Helpers\WidgetExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -835,6 +836,7 @@
     <Content Include="ResourcePackages\Custom\assets\src\js\magnific-init.js" />
     <Content Include="ResourcePackages\Custom\assets\src\sass\icons\sf-icon-font.html" />
     <Content Include="ResourcePackages\Custom\feather-icons.css" />
+    <Content Include="ResourcePackages\Custom\GridSystem\Templates\section.html" />
     <Content Include="ResourcePackages\Custom\GridSystem\Templates\container.html" />
     <Content Include="ResourcePackages\Custom\GridSystem\Templates\grid-12.html" />
     <Content Include="ResourcePackages\Custom\GridSystem\Templates\grid-2+3+2+3+2.html" />
@@ -1139,6 +1141,7 @@
     <Content Include="ResourcePackages\Custom\razorgenerator.directives" />
     <Content Include="ResourcePackages\Custom\README.md" />
     <Content Include="ResourcePackages\Custom\MVC\Views\Navigation\NavigationView.MainNav.cshtml" />
+    <Content Include="ResourcePackages\Custom\MVC\Views\News\List.Featured.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!--<Import Project="OpenAccessNuget.targets" />-->
