--- a/DevMag/SitefinityWebApp.csproj
+++ b/DevMag/SitefinityWebApp.csproj
@@ -780,12 +780,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureWebRole.cs" />
+    <Compile Include="ContentManager.aspx.cs">
+      <DependentUpon>ContentManager.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ContentManager.aspx.designer.cs">
+      <DependentUpon>ContentManager.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Mvc\Helpers\WidgetExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Content\author.jpg" />
+    <Content Include="App_Data\Content\news.txt" />
     <Content Include="ClientBin\Telerik.Sitefinity.Analytics.xap" />
     <Content Include="ClientBin\Telerik.Sitefinity.Silverlight.xap" />
+    <Content Include="ContentManager.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="ResourcePackages\Custom\assets\dist\css\dev-magazine.css" />
     <Content Include="ResourcePackages\Custom\assets\dist\css\styles.css" />
@@ -977,6 +987,7 @@
     <Folder Include="App_Data\Storage\FileSystem\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Content\Authors_items.csv" />
     <None Include="App_Data\GeoLocation\GeoLiteCity.dat" />
     <Content Include="packages.config" />
     <Content Include="ResourcePackages\LICENSE.md" />
@@ -1142,6 +1153,7 @@
     <Content Include="ResourcePackages\Custom\README.md" />
     <Content Include="ResourcePackages\Custom\MVC\Views\Navigation\NavigationView.MainNav.cshtml" />
     <Content Include="ResourcePackages\Custom\MVC\Views\News\List.Featured.cshtml" />
+    <Content Include="ResourcePackages\Custom\MVC\Views\News\List.RecentTopics.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!--<Import Project="OpenAccessNuget.targets" />-->
