--- a/DevMag/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
+++ b/DevMag/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
@@ -125,6 +125,12 @@
 						<add enabled="True" type="Telerik.Sitefinity.Modules.Ecommerce.Orders.Web.UI.WishlistControl, Telerik.Sitefinity.Ecommerce" title="WishListToolboxName" description="WishListToolboxDescription" resourceClassId="OrdersResources" cssClass="sfWishListIcn" moduleName="Ecommerce" visibilityMode="None" name="WishList" />
 					</tools>
 				</add>
+				<add enabled="True" title="Authors" description="Holds all dynamic content widgets for the authors module." ordinal="0" name="Telerik.Sitefinity.DynamicTypes.Model.Authors">
+					<tools>
+						<add enabled="True" type="Telerik.Sitefinity.DynamicModules.Web.UI.Frontend.DynamicContentView, Telerik.Sitefinity" title="Authors" cssClass="sfNewsViewIcn" moduleName="Authors" DynamicContentTypeName="Telerik.Sitefinity.DynamicTypes.Model.Authors.Author" DefaultMasterTemplateKey="34751208-f4f9-63e2-beed-ff0000a086d6" DefaultDetailTemplateKey="35751208-f4f9-63e2-beed-ff0000a086d6" visibilityMode="None" name="Telerik.Sitefinity.DynamicTypes.Model.Authors.Author" />
+						<add enabled="True" type="Telerik.Sitefinity.Frontend.Mvc.Infrastructure.Controllers.MvcWidgetProxy, Telerik.Sitefinity.Frontend" controllerType="Telerik.Sitefinity.Frontend.DynamicContent.Mvc.Controllers.DynamicContentController" title="Authors" cssClass="sfNewsViewIcn sfMvcIcn" moduleName="Authors" WidgetName="Author" ControllerName="Telerik.Sitefinity.Frontend.DynamicContent.Mvc.Controllers.DynamicContentController" visibilityMode="None" name="Telerik.Sitefinity.DynamicTypes.Model.Authors.Author_MVC" />
+					</tools>
+				</add>
 			</sections>
 		</toolbox>
 		<toolbox name="PageLayouts">
