Upgraded feather, created custom widget and designer

--- a/DevMag/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
+++ b/DevMag/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
@@ -131,6 +131,11 @@
 						<add enabled="True" type="Telerik.Sitefinity.Frontend.Mvc.Infrastructure.Controllers.MvcWidgetProxy, Telerik.Sitefinity.Frontend" controllerType="Telerik.Sitefinity.Frontend.DynamicContent.Mvc.Controllers.DynamicContentController" title="Authors" cssClass="sfNewsViewIcn sfMvcIcn" moduleName="Authors" WidgetName="Author" ControllerName="Telerik.Sitefinity.Frontend.DynamicContent.Mvc.Controllers.DynamicContentController" visibilityMode="None" name="Telerik.Sitefinity.DynamicTypes.Model.Authors.Author_MVC" />
 					</tools>
 				</add>
+				<add enabled="True" title="MvcWidgets" ordinal="0" name="MvcWidgets">
+					<tools>
+						<add enabled="True" type="Telerik.Sitefinity.Mvc.Proxy.MvcControllerProxy" controllerType="SitefinityWebApp.Mvc.Controllers.AuthorsWidgetController" title="Authors Widget" ControllerName="SitefinityWebApp.Mvc.Controllers.AuthorsWidgetController" visibilityMode="None" name="AuthorsWidget" />
+					</tools>
+				</add>
 			</sections>
 		</toolbox>
 		<toolbox name="PageLayouts">
