--- a/DevMag/App_Data/Sitefinity/Configuration/DataConfig.config
+++ b/DevMag/App_Data/Sitefinity/Configuration/DataConfig.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<dataConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="8.2.5914.0" initialized="True">
+<dataConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="9.0.6000.0" initialized="True">
 	<connectionStrings>
 		<add connectionString="data source=.\sql2014;UID=sfUser;PWD=qweqweqwe;initial catalog=SitefinityTraining" providerName="System.Data.SqlClient" dbType="MsSql" name="Sitefinity" />
+		<add connectionString="Data Source=.\sql2014;Initial Catalog=SitefinityTraining_Diagnostics;User ID=sfUser;Password=qweqweqwe" providerName="System.Data.SqlClient" dbType="MsSql" name="SitefinityDiagnosticsModule" />
 	</connectionStrings>
 	<urlEvaluators>
 		<add description="ProductTypeFilterEvaluatorDescription" resourceClassId="CatalogResources" type="Telerik.Sitefinity.Modules.Ecommerce.Catalog.Web.UrlEvaluators.ProductTypeFilterUrlEvaluator, Telerik.Sitefinity.Ecommerce" enabled="True" name="ProductTypeFilter" />
