--- a/DevMag/App_Data/Sitefinity/Configuration/FormsConfig.config
+++ b/DevMag/App_Data/Sitefinity/Configuration/FormsConfig.config
@@ -1,17 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<formsConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="8.2.5914.0">
+<formsConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="9.0.6000.0">
 	<notifications formEntrySubmittedNotificationTemplateId="99681208-f4f9-63e2-beed-ff0000a086d6" updatedFormEntrySubmittedNotificationTemplateId="9a681208-f4f9-63e2-beed-ff0000a086d6" />
 	<contentViewControls>
-		<contentViewControl definitionName="FormsBackend">
+		<contentViewControl definitionName="FormsBackend" config:flags="1">
 			<views>
-				<view viewName="FormsBackendList">
-					<sidebar>
-						<sections>
-							<section visible="False" name="ManageAlso" />
-						</sections>
-					</sidebar>
-				</view>
-				<view viewName="FormsBackendInsert">
+				<view viewName="FormsBackendInsert" config:flags="1">
 					<sections>
 						<sections cssClass="sfExpandableForm" displayMode="Write" resourceClassId="MarketoConnectorResources" title="MarketoConnectorExpandableControlLabel" wrapperTag="Div" isHiddenInTranslationMode="False" moduleName="MarketoConnector" name="MarketoConnectorSection">
 							<fields>
@@ -45,7 +38,7 @@
 						</sections>
 					</sections>
 				</view>
-				<view viewName="FormsBackendEdit">
+				<view viewName="FormsBackendEdit" config:flags="1">
 					<sections>
 						<sections cssClass="sfExpandableForm" displayMode="Write" resourceClassId="MarketoConnectorResources" title="MarketoConnectorExpandableControlLabel" wrapperTag="Div" isHiddenInTranslationMode="False" moduleName="MarketoConnector" name="MarketoConnectorSection">
 							<fields>
@@ -79,7 +72,7 @@
 						</sections>
 					</sections>
 				</view>
-				<view viewName="FormsBackendDuplicate">
+				<view viewName="FormsBackendDuplicate" config:flags="1">
 					<sections>
 						<sections cssClass="sfExpandableForm" displayMode="Write" resourceClassId="MarketoConnectorResources" title="MarketoConnectorExpandableControlLabel" wrapperTag="Div" isHiddenInTranslationMode="False" moduleName="MarketoConnector" name="MarketoConnectorSection">
 							<fields>
