--- a/DevMag/App_Data/Sitefinity/Configuration/CatalogConfig.contentViewControls.ProductsBackendDefinitionName.views.ProductsBackendMaster.config
+++ b/DevMag/App_Data/Sitefinity/Configuration/CatalogConfig.contentViewControls.ProductsBackendDefinitionName.views.ProductsBackendMaster.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<view xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="8.2.5914.0" viewName="ProductsBackendMaster">
+<view xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="9.0.6000.0" viewName="ProductsBackendMaster" config:flags="1">
 	<decisionScreens>
-		<add name="NoProductsExistScreen">
+		<add name="NoProductsExistScreen" config:flags="1">
 			<actions>
-				<add commandName="insert_command_sf_ec_prdct_generalproduct" commandButtonType="Create" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" cssClass="sfCreateSubsequentItem" text="General product" wrapperTagKey="Unknown" isSeparator="False" name="Createsf_ec_prdct_generalproduct" />
-				<add commandName="insert_command_sf_ec_prdct_book" commandButtonType="Create" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" cssClass="sfCreateSubsequentItem" text="Book" wrapperTagKey="Unknown" isSeparator="False" name="Createsf_ec_prdct_book" />
-				<add commandName="insert_command_sf_ec_prdct_song" commandButtonType="Create" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" cssClass="sfCreateSubsequentItem" text="Song" wrapperTagKey="Unknown" isSeparator="False" name="Createsf_ec_prdct_song" />
-				<add commandName="insert_command_sf_ec_prdct_software" commandButtonType="Create" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" cssClass="sfCreateSubsequentItem" text="Software" wrapperTagKey="Unknown" isSeparator="False" name="Createsf_ec_prdct_software" />
+				<add commandName="insert_command_sf_ec_prdct_generalproduct" commandButtonType="Create" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" restrictionLevel="Default" cssClass="sfCreateSubsequentItem" text="General product" wrapperTagKey="Unknown" isSeparator="False" name="Createsf_ec_prdct_generalproduct" />
+				<add commandName="insert_command_sf_ec_prdct_book" commandButtonType="Create" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" restrictionLevel="Default" cssClass="sfCreateSubsequentItem" text="Book" wrapperTagKey="Unknown" isSeparator="False" name="Createsf_ec_prdct_book" />
+				<add commandName="insert_command_sf_ec_prdct_song" commandButtonType="Create" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" restrictionLevel="Default" cssClass="sfCreateSubsequentItem" text="Song" wrapperTagKey="Unknown" isSeparator="False" name="Createsf_ec_prdct_song" />
+				<add commandName="insert_command_sf_ec_prdct_software" commandButtonType="Create" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" restrictionLevel="Default" cssClass="sfCreateSubsequentItem" text="Software" wrapperTagKey="Unknown" isSeparator="False" name="Createsf_ec_prdct_software" />
 			</actions>
 		</add>
 	</decisionScreens>
@@ -22,14 +22,14 @@
 	</dialogs>
 	<toolbar>
 		<sections>
-			<section name="toolbar">
+			<section name="toolbar" config:flags="1">
 				<items>
-					<item name="MenuToolboxItem">
+					<item name="MenuToolboxItem" config:flags="1">
 						<menuItems>
-							<item commandName="insert_command_sf_ec_prdct_generalproduct" commandButtonType="Standard" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" cssClass="sfCreateItm" text="General product" wrapperTagKey="Li" widgetType="Telerik.Sitefinity.Web.UI.Backend.Elements.Widgets.CommandWidget, Telerik.Sitefinity" isSeparator="False" name="MenuCreatesf_ec_prdct_generalproduct" type:this="Telerik.Sitefinity.Web.UI.Backend.Elements.Config.CommandWidgetElement, Telerik.Sitefinity" />
-							<item commandName="insert_command_sf_ec_prdct_book" commandButtonType="Standard" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" cssClass="sfCreateItm" text="Book" wrapperTagKey="Li" widgetType="Telerik.Sitefinity.Web.UI.Backend.Elements.Widgets.CommandWidget, Telerik.Sitefinity" isSeparator="False" name="MenuCreatesf_ec_prdct_book" type:this="Telerik.Sitefinity.Web.UI.Backend.Elements.Config.CommandWidgetElement, Telerik.Sitefinity" />
-							<item commandName="insert_command_sf_ec_prdct_song" commandButtonType="Standard" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" cssClass="sfCreateItm" text="Song" wrapperTagKey="Li" widgetType="Telerik.Sitefinity.Web.UI.Backend.Elements.Widgets.CommandWidget, Telerik.Sitefinity" isSeparator="False" name="MenuCreatesf_ec_prdct_song" type:this="Telerik.Sitefinity.Web.UI.Backend.Elements.Config.CommandWidgetElement, Telerik.Sitefinity" />
-							<item commandName="insert_command_sf_ec_prdct_software" commandButtonType="Standard" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" cssClass="sfCreateItm" text="Software" wrapperTagKey="Li" widgetType="Telerik.Sitefinity.Web.UI.Backend.Elements.Widgets.CommandWidget, Telerik.Sitefinity" isSeparator="False" name="MenuCreatesf_ec_prdct_software" type:this="Telerik.Sitefinity.Web.UI.Backend.Elements.Config.CommandWidgetElement, Telerik.Sitefinity" />
+							<item commandName="insert_command_sf_ec_prdct_generalproduct" commandButtonType="Standard" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" restrictionLevel="Default" cssClass="sfCreateItm" text="General product" wrapperTagKey="Li" widgetType="Telerik.Sitefinity.Web.UI.Backend.Elements.Widgets.CommandWidget, Telerik.Sitefinity" isSeparator="False" name="MenuCreatesf_ec_prdct_generalproduct" type:this="Telerik.Sitefinity.Web.UI.Backend.Elements.Config.CommandWidgetElement, Telerik.Sitefinity" />
+							<item commandName="insert_command_sf_ec_prdct_book" commandButtonType="Standard" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" restrictionLevel="Default" cssClass="sfCreateItm" text="Book" wrapperTagKey="Li" widgetType="Telerik.Sitefinity.Web.UI.Backend.Elements.Widgets.CommandWidget, Telerik.Sitefinity" isSeparator="False" name="MenuCreatesf_ec_prdct_book" type:this="Telerik.Sitefinity.Web.UI.Backend.Elements.Config.CommandWidgetElement, Telerik.Sitefinity" />
+							<item commandName="insert_command_sf_ec_prdct_song" commandButtonType="Standard" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" restrictionLevel="Default" cssClass="sfCreateItm" text="Song" wrapperTagKey="Li" widgetType="Telerik.Sitefinity.Web.UI.Backend.Elements.Widgets.CommandWidget, Telerik.Sitefinity" isSeparator="False" name="MenuCreatesf_ec_prdct_song" type:this="Telerik.Sitefinity.Web.UI.Backend.Elements.Config.CommandWidgetElement, Telerik.Sitefinity" />
+							<item commandName="insert_command_sf_ec_prdct_software" commandButtonType="Standard" isFilter="False" objectProviderName="OpenAccessDataProvider" openInSameWindow="False" restrictionLevel="Default" cssClass="sfCreateItm" text="Software" wrapperTagKey="Li" widgetType="Telerik.Sitefinity.Web.UI.Backend.Elements.Widgets.CommandWidget, Telerik.Sitefinity" isSeparator="False" name="MenuCreatesf_ec_prdct_software" type:this="Telerik.Sitefinity.Web.UI.Backend.Elements.Config.CommandWidgetElement, Telerik.Sitefinity" />
 						</menuItems>
 					</item>
 				</items>
