--- a/DevMag/App_Data/Sitefinity/Configuration/VirtualPathSettingsConfig.config
+++ b/DevMag/App_Data/Sitefinity/Configuration/VirtualPathSettingsConfig.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<virtualPathSettingsConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="8.2.5914.0">
+<virtualPathSettingsConfig xmlns:config="urn:telerik:sitefinity:configuration" xmlns:type="urn:telerik:sitefinity:configuration:type" config:version="9.0.6000.0">
 	<virtualPaths>
 		<add resourceLocation="Telerik.Sitefinity.Search.Impl" resolverName="EmbeddedResourceResolver" virtualPath="~/SFSearch/*" />
 		<add resourceLocation="Telerik.Sitefinity.Analytics.Server.Infrastructure" resolverName="EmbeddedResourceResolver" virtualPath="~/AnalyticsModule/*" />
@@ -16,5 +16,8 @@
 		<add resourceLocation="Telerik.Sitefinity.DataIntelligenceConnector" resolverName="EmbeddedResourceResolver" virtualPath="~/DataIntelligenceConnector/*" />
 		<add resourceLocation="Telerik.Sitefinity.RecycleBin" resolverName="EmbeddedResourceResolver" virtualPath="~/RBinRes/*" />
 		<add resourceLocation="Telerik.Sitefinity.Translations" resolverName="EmbeddedResourceResolver" virtualPath="~/TranslationRes/*" />
+		<add resourceLocation="Telerik.Sitefinity.Web.Api" resolverName="EmbeddedResourceResolver" virtualPath="~/APIServicesRes/*" />
+		<add resourceLocation="Telerik.Sitefinity.Diagnostics" resolverName="EmbeddedResourceResolver" virtualPath="~/DiagnosticsRes/*" />
+		<add resourceLocation="Telerik.Sitefinity.SiteSync" resolverName="EmbeddedResourceResolver" virtualPath="~/SFSiteSync/*" />
 	</virtualPaths>
 </virtualPathSettingsConfig>
