--- a/DevMag/web.config
+++ b/DevMag/web.config
@@ -28,6 +28,7 @@ that is bundled with the nuget package under the tools folder.
 
 		<add key="AWSProfileName" value="" />
 -->
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -110,7 +111,8 @@ that is bundled with the nuget package under the tools folder.
         <add assembly="System.ServiceModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
         <add assembly="WindowsBase, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add assembly="PresentationCore, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      <add assembly="Telerik.OpenAccess, Version=2015.3.926.1, Culture=neutral, PublicKeyToken=7ce17eeaf1d59342" /></assemblies>
+        
+      <add assembly="Telerik.OpenAccess, Version=2016.1.224.1, Culture=neutral, PublicKeyToken=7ce17eeaf1d59342" /></assemblies>
       <buildProviders>
         <remove extension=".svc" />
         <add extension=".svc" type="System.ServiceModel.Activation.ServiceBuildProvider, System.ServiceModel.Activation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
@@ -280,7 +282,11 @@ that is bundled with the nuget package under the tools folder.
       <add name="Telerik_Web_UI_WebResource_axd" verb="*" path="Telerik.Web.UI.WebResource.axd" preCondition="integratedMode" type="Telerik.Web.UI.WebResource" />
       <add name="Telerik_Web_UI_DialogHandler_aspx" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.DialogHandler.aspx" type="Telerik.Web.UI.DialogHandler" />
       <add name="Telerik.ReportViewer.axd_*" verb="*" preCondition="integratedMode" path="Telerik.ReportViewer.axd" type="Telerik.ReportViewer.WebForms.HttpHandler, Telerik.ReportViewer.WebForms" />
-    <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
     <staticContent>
       <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="31.00:00:00" />
       <remove fileExtension=".woff" />
@@ -338,51 +344,51 @@ that is bundled with the nuget package under the tools folder.
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Model" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Utilities" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Services.Comments.Impl" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Services.Comments" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.ContentModules" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Services.Notifications" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Resources" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Services.Events" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Personalization" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Search" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Sitefinity.Search.Impl" publicKeyToken="b28c218413bdf563" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.2.5914.0" newVersion="8.2.5914.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.6000.0" newVersion="9.0.6000.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Telerik.Windows.Documents.Flow" publicKeyToken="5803cfa389c90ce7" culture="neutral" />
